[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "performance-ai-mcp"
version = "1.0.3"
readme = "README.md"
description = "Performance Ai automation via MCP. Includes analyze waterfall data, suggest optimizations, calculate core web vitals. By MEOK AI Labs."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
dependencies = ["mcp>=1.0.0"]
keywords = ["mcp", "ai", "meok", "performance"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/performance-ai-mcp"
[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
performance_ai_mcp = "server:main"
